--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,15 @@ body {
   font-family: Inter, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url("https://cutewallpaper.org/21/ramen-wallpapers/Ponyo-ramen-wallpaper-Ghibli-Studio-ghibli-Anime-bento.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   background-color: #7700ee;
   color: #fff;
   overflow-x: hidden;
 }
+
 #root {
   min-height: 100vh;
   display: flex;
@@ -16,6 +21,7 @@ body {
 h1 {
   font-size: 5rem;
 }
+
 @media screen and (max-width: 768px) {
   h1 {
     font-size: 3rem;
@@ -57,24 +63,27 @@ h1 {
   text-align: center;
 }
 
-.member-page > div {
+.member-page>div {
   display: flex;
   flex-direction: row;
   width: 100%;
   text-align: left;
   gap: 2rem;
 }
-.member-page > div > div {
+
+.member-page>div>div {
   display: flex;
   flex-direction: column;
   width: 50%;
   gap: 1rem;
 }
+
 @media screen and (max-width: 768px) {
-  .member-page > div {
+  .member-page>div {
     flex-direction: column;
   }
-  .member-page > div > div {
+
+  .member-page>div>div {
     width: 100%;
   }
 }
@@ -85,7 +94,7 @@ h1 {
   gap: 1rem;
 }
 
-.member-page form > div {
+.member-page form>div {
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -96,7 +105,7 @@ h1 {
   color: #7700ee;
 }
 
-.member-page form .card > div {
+.member-page form .card>div {
   display: flex;
   gap: 1rem;
   justify-content: space-between;
